--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@angular/core": "^19.1.2",
     "@angular/forms": "^19.1.2",
     "@angular/material": "^19.1.0",
-    "@angular/router": "^19.1.2",
     "@angular/platform-browser": "^19.1.2",
     "@angular/platform-browser-dynamic": "^19.1.2",
+    "@angular/router": "^19.1.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
@@ -47,7 +47,10 @@
     "@angular/cli": "^19.1.3",
     "@angular/compiler-cli": "^19.1.2",
     "@types/jasmine": "~5.1.0",
+    "@types/plotly.js": "^2.35.2",
     "@types/plotly.js-dist-min": "^2.3.4",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
