--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    // "paths": {
+    //   "assets/scripts/plotly.min.js": ["../node_modules/@types/plotly.js"]
+    // }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
