--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@ngrx/effects": "^19.0.0",
+    "@ngrx/operators": "^19.0.0",
+    "@ngrx/signals": "^19.0.0",
+    "@ngrx/store": "^19.0.0",
+    "@ngrx/store-devtools": "^19.0.0",
     "angular-gridster2": "^19.0.0",
     "angular-plotly.js": "^6.0.0",
     "plotly.js-dist-min": "^2.35.3",
@@ -44,6 +49,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.3",
+    "@angular-devkit/core": "^19.1.4",
     "@angular/cli": "^19.1.3",
     "@angular/compiler-cli": "^19.1.2",
     "@types/jasmine": "~5.1.0",
