--- a/package.json
+++ b/package.json
@@ -50,14 +50,19 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.3",
     "@angular-devkit/core": "^19.1.4",
+    "@angular-eslint/eslint-plugin": "^19.0.2",
+    "@angular-eslint/eslint-plugin-template": "^19.0.2",
+    "@angular-eslint/template-parser": "^19.0.2",
     "@angular/cli": "^19.1.3",
     "@angular/compiler-cli": "^19.1.2",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
     "@types/jasmine": "~5.1.0",
     "@types/plotly.js": "^2.35.2",
     "@types/plotly.js-dist-min": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
-    "eslint": "^9.18.0",
+    "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "husky": "^8.0.0",
@@ -69,6 +74,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^15.4.1",
     "prettier": "^3.4.2",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "typescript-eslint": "^8.21.0"
   }
 }
