--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/ngrx-toolkit": "^19.0.2",
     "@angular/animations": "^19.1.2",
     "@angular/common": "^19.1.2",
     "@angular/compiler": "^19.1.2",
